--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.18.1",
     "budo": "^10.0.4",
     "choo": "^6.0.1",
+    "choo-layout": "^1.0.0",
     "cookie-parser": "^1.4.3",
     "ecstatic": "^3.0.0",
     "express": "^4.15.4",
