--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ecstatic": "^3.0.0",
     "express": "^4.15.4",
     "morgan": "^1.8.2",
+    "onchange": "^3.2.1",
     "serve-favicon": "^2.4.4"
   },
   "devDependencies": {
